force-app/main/default/objects/Transaction__c/fields/ATM_Location__c.field-meta.xml
<CustomField>
    <fullName>ATM_Location__c</fullName>
    <description>Location of the ATM, such as City/State.</description>
    <label>ATM Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>