force-app/main/default/objects/Transaction__c/fields/Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>