force-app/main/default/objects/Transaction__c/fields/Place_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Purchase__c</fullName>
    <description>Place of business or person who was paid.</description>
    <label>Place of Purchase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>