force-app/main/default/objects/Transaction__c/fields/SubBudget__c.field-meta.xml
<CustomField>
    <fullName>SubBudget__c</fullName>
    <label>Sub Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Budget</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>