force-app/main/default/objects/Transaction__c/fields/Transfer_To_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_From__c</fullName>
    <description>To/From whom was this transfer sent?</description>
    <label>Transfer To/From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>