force-app/main/default/objects/Transaction__c/recordTypes/ATM_Deposit.recordType-meta.xml
<RecordType>
    <fullName>ATM_Deposit</fullName>
    <active>true</active>
    <description>Deposit of funds via ATM</description>
    <label>ATM Deposit</label>
</RecordType>