force-app/main/default/objects/Transaction__c/recordTypes/ATM_Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>ATM_Withdrawal</fullName>
    <active>true</active>
    <description>Withdrawal of funds via ATM</description>
    <label>ATM Withdrawal</label>
</RecordType>