force-app/main/default/objects/Transaction__c/recordTypes/Incoming_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Incoming_Transfer</fullName>
    <active>true</active>
    <description>Deposit via transfer from another party</description>
    <label>Incoming Transfer</label>
</RecordType>