force-app/main/default/objects/Transaction__c/recordTypes/Outgoing_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Outgoing_Transfer</fullName>
    <active>true</active>
    <description>Withdrawal via transfer to another party</description>
    <label>Outgoing Transfer</label>
</RecordType>