force-app/main/default/objects/Transaction__c/recordTypes/Purchase.recordType-meta.xml
<RecordType>
    <fullName>Purchase</fullName>
    <active>true</active>
    <description>Withdrawal of funds via debit purchase</description>
    <label>Purchase</label>
</RecordType>