force-app/main/default/objects/Transaction__c/validationRules/Negative_Amount_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Amount_Error</fullName>
    <active>true</active>
    <description>Non-negative amounts not allowed.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Please enter a non-negative amount.</errorMessage>
</ValidationRule>